hphp/hack/test/typecheck/reactive/memoize_mutable1.php
<?hh // partial

class A implements IMemoizeParam {
  public function getInstanceKey(): string {
    return "";
  }
}

<<__Rx, __Memoize>>
function f(<<__Mutable>> A $a): void {
}
